# bmstu-2-term-types-and-data-structs

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
lab_01/: big_float.c  big_float.h  big_int.c  big_int.h  build.sh  errors.c  errors.h  main.c  makefile
lab_01/docs/: report.docx
lab_02/: create_test_file.py  makefile
lab_02/data/: test_100  test_1000  test_45  test_500
lab_02/docs/: report.docx
lab_02/inc/: address.h  common.h  subscriber.h  subscriber_info.h
lab_02/src/: address.c  common.c  main.c  subscriber.c  subscriber_info.c
lab_02/unit_tests/: check_main.c
lab_03/: CMakeLists.txt  create_matrix.py
lab_03/data/: 250x250_10_1.txt  250x250_10_2.txt  250x250_15_1.txt  250x250_15_2.txt  250x250_20_1.txt  250x250_20_2.txt  250x250_2_1.txt  250x250_2_2.txt  250x250_30_1.txt  250x250_30_2.txt  250x250_40_1.txt  250x250_40_2.txt  250x250_50_1.txt  250x250_50_2.txt  250x250_5_1.txt  250x250_5_2.txt  250x250_60_1.txt  250x250_60_2.txt  500x500_10_1.txt  500x500_10_2.txt  500x500_15_1.txt  500x500_15_2.txt  500x500_20_1.txt  500x500_20_2.txt  500x500_2_1.txt  500x500_2_2.txt  500x500_30_1.txt  500x500_30_2.txt  500x500_40_1.txt  500x500_40_2.txt  500x500_50_1.txt  500x500_50_2.txt  500x500_5_1.txt  500x500_5_2.txt  500x500_60_1.txt  500x500_60_2.txt
lab_03/docs/: report.docx
lab_03/inc/: matrix.h  measure_time.h  sparse_matrix.h
lab_03/src/: main.c  matrix.c  measure_time.c  sparse_matrix.c
lab_04/docs/: report.docx
lab_04/func_tests/: 100_arr.txt  100_list.txt  10_arr.txt  10_list.txt  250_arr.txt  250_list.txt  500_arr.txt  500_list.txt  50_arr.txt  50_list.txt  create_tests.py
lab_04/inc/: stack.h
lab_04/src/: main.c  stack.c
lab_05/: makefile
lab_05/inc/: arr_queue.h  queue.h  request.h  service_simulation.h
lab_05/src/: arr_queue.c  main.c  queue.c  request.c  service_simulation.c
lab_06/: makefile
lab_06/data/: data.txt  nums_100  (+2 more)
lab_07/: makefile
(+12 files in other folders)
